--- a/cards/index.html
+++ b/cards/index.html
@@ -8,7 +8,7 @@
   min-height: 150px; }
     </style>
 </head>
-    <body ng-app="YourApp">
+    <body ng-app="cardDemo1">
 
 <div ng-controller="AppCtrl">
   <md-content>
@@ -54,7 +54,20 @@ h?h.pageXOffset:(k[m]||f.parentNode||f).scrollLeft);f=a.toString()+","+c;b.b.has
 
 
 angular.module('cardDemo1', ['ngMaterial'])
-.controller('AppCtrl', function($scope) {
+.controller('AppCtrl', function($scope, $http) {
+
+      $http.defaults.headers.put = {
+        'Access-Control-Allow-Origin': '*',
+        'Access-Control-Allow-Methods': 'GET, POST, PUT, DELETE, OPTIONS',
+        'Access-Control-Allow-Headers': 'Content-Type, X-Requested-With'
+        };
+        $http.defaults.useXDomain = true;
+    $http.get("http://gujubhai.herokuapp.com/api/v1/malls?access_token=pnKUJZ9HcUKXQACEmtLj")
+    .success(function(response) {
+      $scope.mallsJson = response;
+      console.log(response);
+      alert(response);
+    });
 });
     </script>
 
